@@ -1,3 +1,4 @@
+- Bug fix: Fixed bug in contains object
 - Bug fix: Fixing SpotBugs issue (SE_BAD_FIELD)
 
 1.7.0 (11-02-2021)
